Some initialize circle bug fixes. The search is loaded depends on the databases. Still some initialize circle bug to fix. The search loading is to be finish.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -49,4 +49,6 @@
     <string name="book_author">责任者</string>
     <string name="book_num">索书号</string>
     <string name="book_publisher">出版信息</string>
+    <string name="lib_time_title">开放时间:</string>
+    <string name="lib_borrow_title">当前借阅:</string>
 </resources>
