--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="lib_password_tip">密码</string>
     <string name="encrypt_error">加密时产生错误，请重新输入密码。</string>
     <string name="decrypt_error">解密时产生错误，请重新输入密码。</string>
+    <string name="reborrow">续借</string>
 </resources>
