--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -69,6 +69,8 @@
     <string name="more">更多...</string>
     <string name="book_total">馆藏:</string>
     <string name="book_left">可借:</string>
+    <string name="lib_borrow">借出日期:</string>
+    <string name="lib_return">应还日期:</string>
     <string name="lib_username_tip">输入学号或邮箱</string>
     <string name="lib_password_tip">密码</string>
     <string name="encrypt_error">加密时产生错误，请重新输入密码。</string>
