--- a/README
+++ b/README
@@ -4,11 +4,12 @@ iBeiKe InfoPortal (Rev 1.1)
 
 功能：
     1.无课教室查询。
-	2.图书馆藏书查询。
-	3.学校通知，活动信息查询。
+	2.已借图书查询。
+	3.图书馆藏书查询。
+	4.校园卡账户信息、余额查询。
+	5.学校通知，意见建议信息查看。
 
 项目主页：
-    http://code.google.com/p/infoportal/
 	https://github.com/Candyroot/InfoPortal/
 
 网站：
@@ -18,3 +19,19 @@ iBeiKe InfoPortal (Rev 1.1)
 联系开发者：
     E-mail: liubinging@gmail.com
 	Twitter: @Candyroot
+	Blog:  http://unixoss.com
+	
+License:
+   Copyright [2012] [iBeiKe.com]
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
